Fix color mode toggle button position on mobile in production

--- a/docusaurus/src/scss/navbar.scss
+++ b/docusaurus/src/scss/navbar.scss
@@ -316,7 +316,7 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
     }
 
     button[class*="toggleButton"] {
-      right: 42px;
+      right: 60px;
       top: 12px;
       border: none;
     }
